--- a/CompanySite/CompanySite/Views/Shared/MetatagsPartial.cshtml
+++ b/CompanySite/CompanySite/Views/Shared/MetatagsPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<meta charset="utf-8" />
+﻿@using CompanySite.Services
+
+<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 @if (ViewBag.Title != null)
@@ -7,7 +9,7 @@
 }
 else
 {
-    <title>Company site</title>
+    <title>@Config.CompanyName</title>
 }
 
 @if (ViewBag.Description != null)
