--- a/CompanySite/CompanySite/wwwroot/css/main.css
+++ b/CompanySite/CompanySite/wwwroot/css/main.css
@@ -53,12 +53,14 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-input, select, textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none; }
-
+/*
+	input, select, textarea {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+	}
+	*/
 /* Basic */
 html {
   box-sizing: border-box; }
@@ -1179,3 +1181,14 @@ section:last-child,
   /* Copyright */
   #copyright {
     padding: 20px 30px; } }
+
+/* Admin panel and login page */
+.custom {
+  padding: 15px 0; }
+  .custom label, .custom a {
+    display: block; }
+
+.img-block {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto; }
