--- a/CompanySite/CompanySite/wwwroot/sass/main.scss
+++ b/CompanySite/CompanySite/wwwroot/sass/main.scss
@@ -84,13 +84,14 @@
 		border: 0;
 		padding: 0;
 	}
-
+	/*
 	input, select, textarea {
 		-moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
 	}
+	*/
 
 /* Basic */
 
@@ -836,5 +837,20 @@
 			#copyright {
 				padding: 20px 30px;
 			}
+	}
 
+	/* Admin panel and login page */
+
+	.custom {
+		padding: 15px 0;
+
+		label, a {
+			display: block;
+		}
+	}
+
+	.img-block {
+		display:block;
+		max-width: 100%;
+		margin: 0 auto;
 	}
