--- a/CompanySite/CompanySite/Views/_ViewImports.cshtml
+++ b/CompanySite/CompanySite/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using CompanySite.Models 
+@using CompanySite.Services 
+@using CompanySite.Domain.Entities 
