--- a/CompanySite/CompanySite/wwwroot/css/main.css
+++ b/CompanySite/CompanySite/wwwroot/css/main.css
@@ -960,7 +960,7 @@ section:last-child,
   border-top: solid 1px #b5bec3;
   box-shadow: inset 0px 1px 0px 0px #e0e4e7;
   text-align: center;
-  padding: 45px 0 80px 0;
+  padding: 35px 0 35px 0;
   color: #8d9ca3;
   text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5); }
   #copyright a {
@@ -1191,4 +1191,5 @@ section:last-child,
 .img-block {
   display: block;
   max-width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 15px 0; }
