--- a/CompanySite/CompanySite/wwwroot/sass/main.scss
+++ b/CompanySite/CompanySite/wwwroot/sass/main.scss
@@ -505,7 +505,7 @@
 		border-top: solid 1px #b5bec3;
 		box-shadow: inset 0px 1px 0px 0px #e0e4e7;
 		text-align: center;
-		padding: 45px 0 80px 0;
+		padding: 35px 0 35px 0;
 		color: #8d9ca3;
 		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.5);
 
@@ -853,4 +853,5 @@
 		display:block;
 		max-width: 100%;
 		margin: 0 auto;
+		padding: 15px 0;
 	}
