--- a/CompanySite/CompanySite/Areas/Admin/Views/ServiceItems/Edit.cshtml
+++ b/CompanySite/CompanySite/Areas/Admin/Views/ServiceItems/Edit.cshtml
@@ -36,6 +36,7 @@
                 <div>
                     <img class="img-block" src="~/images/serviceImages/@Model.TitleImage" />
                 </div>
+                <span asp-validation-for="TitleImage"></span>
             </div>
             <div class="custom">
                 <label asp-for="MetaTitle"></label>
