--- a/CompanySite/CompanySite/Views/_ViewImports.cshtml
+++ b/CompanySite/CompanySite/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using CompanySite.Models 
 @using CompanySite.Services 
 @using CompanySite.Domain.Entities 
+@using CompanySite.Models.ViewComponents 
